// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Geolocation should hide clear fields button  when latitude and longitude are empty 1`] = `
<div
  className="geolocation form-inline"
>
  <Map
    autoCenter={false}
    clickOnCluster={[Function]}
    clickOnMarker={[Function]}
    cluster={false}
    height={370}
    hoverOnMarker={[Function]}
    interactiveLayerIds={Array []}
    latitude={null}
    longitude={null}
    markers={Array []}
    onClick={[Function]}
    renderMarker={null}
    renderPopupInfo={null}
    scrollZoom={true}
    showControls={false}
    width={null}
    zoom={4}
  />
  <div
    className="form-row"
  >
    <div
      className="form-group half-width"
    >
      <label>
        Latitude
      </label>
      <input
        className="form-control"
        id="lat"
        onChange={[Function]}
        step="any"
        type="number"
        value=""
      />
    </div>
    <div
      className="form-group half-width"
    >
      <label>
        Longitude
      </label>
      <input
        className="form-control"
        id="lon"
        onChange={[Function]}
        step="any"
        type="number"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Geolocation should render button to clear fields when longitude and latitude not empty 1`] = `
<div
  className="geolocation form-inline"
>
  <Map
    autoCenter={false}
    clickOnCluster={[Function]}
    clickOnMarker={[Function]}
    cluster={false}
    height={370}
    hoverOnMarker={[Function]}
    interactiveLayerIds={Array []}
    latitude={null}
    longitude={null}
    markers={
      Array [
        Object {
          "latitude": 32.18,
          "longitude": -17.2,
        },
      ]
    }
    onClick={[Function]}
    renderMarker={null}
    renderPopupInfo={null}
    scrollZoom={true}
    showControls={false}
    width={null}
    zoom={4}
  />
  <div
    className="form-row"
  >
    <div
      className="form-group half-width"
    >
      <label>
        Latitude
      </label>
      <input
        className="form-control"
        id="lat"
        onChange={[Function]}
        step="any"
        type="number"
        value={32.18}
      />
    </div>
    <div
      className="form-group half-width"
    >
      <label>
        Longitude
      </label>
      <input
        className="form-control"
        id="lon"
        onChange={[Function]}
        step="any"
        type="number"
        value={-17.2}
      />
    </div>
  </div>
  <div
    className="clear-field-button"
  >
    <button
      onClick={[Function]}
      type="button"
    >
      <Connect(Translate)>
        Clear coordinates
      </Connect(Translate)>
    </button>
  </div>
</div>
`;
